--- a/index.html
+++ b/index.html
@@ -155,23 +155,21 @@
           <p class="jello">m</p>
         </article>
         <article id="name" data-aos="fade-up" data-aos-delay="200">
-          <p class="jello">J</p>
+          <p class="jello">H</p>
           <p class="jello">a</p>
-          <p class="jello">t</p>
+          <p class="jello">r</p>
+          <p class="jello">d</p>
           <p class="jello">i</p>
-          <p class="jello">n</p>
-          &nbsp;
-          <p class="jello">S</p>
-          <p class="jello">i</p>
-          <p class="jello">n</p>
-          <p class="jello">g</p>
-          <p class="jello">h</p>
+          <p class="jello">k</p>
 		  &nbsp;
-          <p class="jello">S</p>
+          <p class="jello">C</p>
+          <p class="jello">h</p>
+          <p class="jello">u</p>
+          <p class="jello">d</p>
           <p class="jello">a</p>
-          <p class="jello">t</p>
-          <p class="jello">i</p>
-          <p class="jello">j</p>
+          <p class="jello">s</p>
+          <p class="jello">a</p>
+          <p class="jello">m</p>
           <p class="jello">a</p>
           <p class="jello">.</p>
         </article>
