--- a/index.html
+++ b/index.html
@@ -185,14 +185,30 @@
             <p class="jello">i</p>
             <p class="jello">g</p>
             <p class="jello">n</p>
+            <p class="jello">s</p>
           </div>
           <div>
             <p class="jello">&</p>
           </div>
           <div>
-            <p class="jello">c</p>
-            <p class="jello">o</p>
             <p class="jello">d</p>
+            <p class="jello">e</p>
+            <p class="jello">v</p>
+            <p class="jello">e</p>
+            <p class="jello">l</p>
+            <p class="jello">o</p>
+            <p class="jello">p</p>
+            <p class="jello">e</p>
+          </div>
+		  <div>
+            <p class="jello">p</p>
+            <p class="jello">r</p>
+            <p class="jello">o</p>
+            <p class="jello">t</p>
+            <p class="jello">o</p>
+            <p class="jello">t</p>
+            <p class="jello">y</p>
+            <p class="jello">p</p>
             <p class="jello">e</p>
           </div>
           <div>
@@ -201,13 +217,20 @@
             <p class="jello">r</p>
           </div>
 		  <div>
-            <p class="jello">A</p>
-            <p class="jello">n</p>
-            <p class="jello">d</p>
-            <p class="jello">r</p>
+            <p class="jello">W</p>
+            <p class="jello">e</p>
+            <p class="jello">b</p>
+          </div>
+		  <div>
+            <p class="jello">&</p>
+          </div>
+          <div>
+            <p class="jello">M</p>
             <p class="jello">o</p>
+            <p class="jello">b</p>
             <p class="jello">i</p>
-            <p class="jello">d</p>
+            <p class="jello">l</p>
+            <p class="jello">e</p>
           </div>
           <div>
             <p class="jello">A</p>
