--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
           <p class="jello">s</p>
           <p class="jello">t</p>
           <p class="jello">e</p>
-          <p class="jello">(</p>
-          <p class="jello">)</p>
-          <p class="jello">;</p>
+          <p class="jello">🙏</p>
           &nbsp;
           <p class="jello">I</p>
           <p class="jello">'</p>
