--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
         <ul class="navbar-tabs-ul">
           <li class="home activeThistab" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="100">
             <a href="#home" tabindex="0" aria-label="Home menu button">
-              &#60;/Home&#62;
+              🏠Home
             </a>
           </li>
 
           <li class="about" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="300">
             <a href="#about" aria-label="about menu button">
-              &#60;/AboutMe&#62;
+              🙋‍♂️About Me
             </a>
           </li>
 
           <li class="skills" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="500">
             <a href="#skills" aria-label="skills menu button">
-              &#60;/Skills&#62;
+              🧠Skills
             </a>
           </li>
 
           <li class="projects" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="700">
             <a href="#projects" aria-label="projects menu button">
-              &#60;/Projects&#62;
+              👨🏻‍💻Projects
             </a>
           </li>
         </ul>
@@ -109,23 +109,23 @@
       <ul class="mobile-navbar-tabs-ul" id="mobile-ul">
         <li id="home-mobile-tab" class="mobile-navbar-tabs-li home activeThismobiletab" onclick="hidemenubyli()">
           <a href="#home" tabindex="0" aria-label="Home menu button">
-            &#60;/Home&#62;
+            🏠Home
           </a>
         </li>
 
         <li id="aboutme-mobile-tab" class="mobile-navbar-tabs-li about" onclick="hidemenubyli()">
           <a href="#about" tabindex="0" aria-label="about menu button">
-            &#60;/AboutMe&#62;
+            🙋‍♂️About Me
           </a>
         </li>
         <li id="skills-mobile-tab" class="mobile-navbar-tabs-li skills" onclick="hidemenubyli()">
           <a href="#skills" tabindex="0" aria-label="skills menu button">
-            &#60;/Skills&#62;
+            🧠Skills
           </a>
         </li>
         <li id="projects-mobile-tab" class="mobile-navbar-tabs-li projects" onclick="hidemenubyli()">
           <a href="#projects" tabindex="0" aria-label="projects menu button">
-            &#60;/Projects&#62;
+            👨🏻‍💻Projects
           </a>
         </li>
       </ul>
@@ -269,7 +269,7 @@ Android Studio.<br />
       <div class="about-section">
         <div class="section-heading">
           <h2 class="section-heading-article" tabindex="0" aria-label="About me heading">
-            &#60;/AboutMe&#62;
+            🙋‍♂️About Me
           </h2>
           <p class="sectionHeadingP"></p>
         </div>
@@ -316,7 +316,7 @@ Android Studio.<br />
       <div class="skills-section">
         <div class="section-heading" data-aos="fade-up">
           <h2 class="section-heading-article" tabindex="0" aria-label="skills heading">
-            &#60;/Skills&#62;
+            🧠Skills
           </h2>
           <p class="sectionHeadingP"></p>
         </div>
@@ -391,7 +391,7 @@ Android Studio.<br />
       <div class="projects-section-div">
         <div class="section-heading" data-aos="fade-up">
           <h2 class="section-heading-article" tabindex="0" aria-label="My projects starts from here">
-            &#60;/Projects&#62;
+            👨🏻‍💻Projects
           </h2>
           <p class="sectionHeadingP"></p>
         </div>
