--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="keywords"
     content="Hardik Chudasama,Hardik Chudasama portfolio,Hardik Chudasama Portfolio,hardikchudasama,Hardik Chudasama site,Hardik Chudasama Site,Hardik Chudasama me,Hardik Chudasama web,Hardik Chudasama github,hardikchudasama site,hardikchudasama uiverse,uiverse,Hardik Chudasama uiverse,Hardik Chudasama android developer,android developer,Hardik Chudasama haryana,jatin android" />
   <meta name="author" content="Hardik Chudasama" />
-  <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
+  <meta property="og:image" content="https://hardikprafulbhaichudasama.github.io/src/png/Preview-card-min.png" />
   <meta property="og:title" content="Hardik Chudasama | Portfolio" />
   <meta property="og:description"
     content="Hi! My name is Jatin. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
