--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="description"
     content="Hardik Chudasama | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
   <meta name="keywords"
-    content="Hardik Chudasama,Hardik Chudasama portfolio,Hardik Chudasama Portfolio,hardikchudasama,Hardik Chudasama site,Hardik Chudasama Site,Hardik Chudasama me,Hardik Chudasama web,Hardik Chudasama github,hardikchudasama site,hardikchudasama uiverse,uiverse,Hardik Chudasama uiverse,Hardik Chudasama android developer,android developer,Hardik Chudasama haryana,jatin android" />
+    content="Hardik Chudasama,Hardik Chudasama portfolio,Hardik Chudasama Portfolio,hardikchudasama,Hardik Chudasama site,Hardik Chudasama Site,Hardik Chudasama me,Hardik Chudasama web,Hardik Chudasama github,hardikchudasama site,hardikchudasama uiverse,uiverse,Hardik Chudasama uiverse,Hardik Chudasama web designer,web designer,Hardik Chudasama haryana,hardik designer" />
   <meta name="author" content="Hardik Chudasama" />
   <meta property="og:image" content="https://hardikprafulbhaichudasama.github.io/src/png/Preview-card-min.png" />
   <meta property="og:title" content="Hardik Chudasama | Portfolio" />
@@ -305,7 +305,7 @@ Android Studio.<br />
           </div>
 
           <div class="dp" data-aos="fade-up">
-            <img src="src/webp/jatin(2).webp" alt="Hardik Chudasama" tabindex="0" aria-label="image of vinod" />
+            <img src="src/webp/jatin(2).webp" alt="Hardik Chudasama" tabindex="0" aria-label="image of jatin" />
           </div>
         </div>
       </div>
