--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Android Studio.<br />
           </div>
 
           <div class="dp" data-aos="fade-up">
-            <img src="src/webp/jatin(2).webp" alt="Hardik Chudasama" tabindex="0" aria-label="image of jatin" />
+            <img src="src/webp/hardik.webp" alt="Hardik Chudasama" tabindex="0" aria-label="image of jatin" />
           </div>
         </div>
       </div>
