--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <meta property="og:image" content="https://hardikprafulbhaichudasama.github.io/src/png/Preview-card-min.png" />
   <meta property="og:title" content="Hardik Chudasama | Portfolio" />
   <meta property="og:description"
-    content="Hi! My name is Jatin. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Hi! My name is Hardik. I'm a UI/UX designer and digital visual artist. Explore my projects and designs to see how I craft intuitive interfaces, clean user flows, and thoughtful experiences. I value simplicity, clarity, and seamless interactions that elevate user engagement." />
 
   <meta property="og:site_name" content="Hardik Chudasama | Portfolio" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Hardik Chudasama | Portfolio" />
   <meta name="twitter:description"
-  content="Hi! My name is Jatin. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+  content="Hi! My name is Hardik. I'm a UI/UX designer and digital visual artist. Explore my projects and designs to see how I craft intuitive interfaces, clean user flows, and thoughtful experiences. I value simplicity, clarity, and seamless interactions that elevate user engagement." />
   <title>Hardik Chudasama | Portfolio</title>
   <link rel="icon" type="image/x-icon" href="src/png/main-favicon.png" />
   <!-- aos cdn -->
@@ -224,14 +224,9 @@
           </div>
         </article>
         <p id="info-para" data-aos="fade-up" data-aos-delay="600">
-A visionary Android developer skilled in Jetpack Compose, Kotlin,
-and Java, expertly crafting elegant applications in
-Android Studio.<br />
+A visionary UI/UX designer skilled in user research, wireframing, and prototyping, crafting seamless digital experiences with Figma, Adobe XD, and Sketch.<br />
           <br />
-          With a passion for intuitive design and seamless functionality,
-		  they transform concepts into captivating user experiences,
-		  consistently pushing boundaries and embracing innovation
-		  in the ever-evolving mobile landscape.
+          With a passion for intuitive design and user-centered solutions, they transform ideas into captivating, functional interfaces, consistently pushing boundaries and embracing innovation in the ever-evolving design landscape.
         </p>
         <div class="contact-btn-div" data-aos="fade-up" data-aos-delay="800">
           <a href="mailto:hardikchudasama1998@gmail.com" tabindex="-1">
@@ -276,19 +271,15 @@ Android Studio.<br />
         <div class="info-dp-section">
           <div class="about-info">
             <p tabindex="0">
-              Hi! My name is Jatin. I'm a Sr. Android Developer and Innovator. I love creating things that exist on the internet. My interest in mobile app development started back in 2019 when I decided to create matrimonial app.
+              Hi! My name is Hardik. I'm a Sr. UI/UX Designer and Innovator. I love creating intuitive and impactful experiences on the web and beyond. My journey in design started back in 2021 when I worked on designing a healthcare website.
             </p>
             <br />
             <p tabindex="0">
-              Instead of creating a mobile application, i started
-              enjoying app development. Creating custom things for mobile taught
-              me a lot about design & development!
+              Instead of just focusing on the visual, I found a passion for the entire user experience process. Crafting custom designs taught me a lot about human-centered design & creative problem-solving!
             </p>
             <br />
             <p tabindex="0">
-              My main focus these days is building interesting & creative app
-              designs, I like to code things from scratch, and enjoy bringing
-              ideas to life in the form of app.
+              These days, my main focus is building engaging & innovative interfaces, from wireframes to polished prototypes, and bringing ideas to life through thoughtful design.
             </p>
              <!-- Resume button -->
       <button class="resume-btn" id="resume-btn" onclick="openURL()">
