--- a/index.html
+++ b/index.html
@@ -183,8 +183,18 @@
             <p class="jello">g</p>
             <p class="jello">n</p>
           </div>
+          <div>
+            <p class="jello">U</p>
+            <p class="jello">I</p>
+            <p class="jello">/</p>
+            <p class="jello">U</p>
+            <p class="jello">X</p>
+          </div>
+          <div>
+            <p class="jello">&</p>
+          </div>
 		  <div>
-            <p class="jello">p</p>
+            <p class="jello">P</p>
             <p class="jello">r</p>
             <p class="jello">o</p>
             <p class="jello">t</p>
@@ -193,12 +203,10 @@
             <p class="jello">y</p>
             <p class="jello">p</p>
             <p class="jello">e</p>
-            <p class="jello">s</p>
           </div>
           <div>
-            <p class="jello">f</p>
             <p class="jello">o</p>
-            <p class="jello">r</p>
+            <p class="jello">f</p>
           </div>
 		  <div>
             <p class="jello">W</p>
@@ -220,6 +228,7 @@
             <p class="jello">A</p>
             <p class="jello">p</p>
             <p class="jello">p</p>
+            <p class="jello">s</p>
             <p class="jello">.</p>
           </div>
         </article>
