--- a/index.html
+++ b/index.html
@@ -212,19 +212,7 @@
             <p class="jello">W</p>
             <p class="jello">e</p>
             <p class="jello">b</p>
-          </div>
-		  <div>
-            <p class="jello">&</p>
-          </div>
-          <div>
-            <p class="jello">M</p>
-            <p class="jello">o</p>
-            <p class="jello">b</p>
-            <p class="jello">i</p>
-            <p class="jello">l</p>
-            <p class="jello">e</p>
-          </div>
-          <div>
+            <p class="jello">/</p>
             <p class="jello">A</p>
             <p class="jello">p</p>
             <p class="jello">p</p>
