Add icons and Last Line changed

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ A visionary UI/UX designer skilled in user research, wireframing, and prototypin
       <div class="footercontainer">
         <div class="two-words">
           <article tabindex="0" aria-label="Learning, Living, and Leveling Up, my quote">
-            "Design, Improve, Learn, and Repeat."
+            "Design, improve, learn, and thrive!"
           </article>
         </div>
         <div class="social-media-container">
