--- a/index.html
+++ b/index.html
@@ -315,57 +315,57 @@ A visionary UI/UX designer skilled in user research, wireframing, and prototypin
           </h3>
           <ul class="tech-stack-wrapper">
 		  <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/android_studio.png" alt="photoshop skill" class="tech-stack-logo" />
-              <span class="tooltip">ANDROID STUDIO</span>
+              <img src="./src/png/figmalogo.png" alt="photoshop skill" class="tech-stack-logo" />
+              <span class="tooltip">FIGMA</span>
             </li>
 			<li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/java.png" alt="c language skill" class="tech-stack-logo" />
-              <span class="tooltip">JAVA</span>
+              <img src="./src/png/adobe_xd.png" alt="c language skill" class="tech-stack-logo" />
+              <span class="tooltip">ADOBE XD</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/kotlin.png" alt="c++ language skill" class="tech-stack-logo" />
-              <span class="tooltip">KOTLIN</span>
+              <img src="./src/png/zeplin.png" alt="c++ language skill" class="tech-stack-logo" />
+              <span class="tooltip">ZEPLIN</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/compose.png" alt="photoshop skill" class="tech-stack-logo" />
-              <span class="tooltip">COMPOSE</span>
+              <img src="./src/png/marvel.png" alt="photoshop skill" class="tech-stack-logo" />
+              <span class="tooltip">MARVEL</span>
             </li>
 			
 			<li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/gitlogo.png" alt="git skill" class="tech-stack-logo" />
-              <span class="tooltip">GIT</span>
+              <img src="./src/png/adobe_illustrator.png" alt="git skill" class="tech-stack-logo" />
+              <span class="tooltip">ADOBE Illustrator</span>
             </li>
 			
 		  <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/githublogo.png" alt="github skill" class="tech-stack-logo needtobeinvert" />
-              <span class="tooltip">GITHUB</span>
+              <img src="./src/png/adobe_photoshop.png" alt="github skill" class="tech-stack-logo needtobeinvert" />
+              <span class="tooltip">ADOBE PHOTOSHOP</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/figmalogo.png" alt="figma skill" class="tech-stack-logo" />
-              <span class="tooltip">FIGMA</span>
+              <img src="./src/png/adobe_premiere.png" alt="figma skill" class="tech-stack-logo" />
+              <span class="tooltip">ADOBE PREMIERE PRO</span>
             </li>
 			
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/htmllogo.png" alt="Html skill" class="tech-stack-logo" />
+              <img src="./src/png/canva.png" alt="Html skill" class="tech-stack-logo" />
+              <span class="tooltip">CANVA</span>
+            </li>
+
+            <li class="tech-stack-box" data-aos="fade-up">
+              <img src="./src/png/htmllogo.png" alt="css skill" class="tech-stack-logo" />
               <span class="tooltip">HTML</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/csslogo.png" alt="css skill" class="tech-stack-logo" />
-              <span class="tooltip">CSS</span>
+              <img src="./src/png/githublogo.png" alt="js skill" class="tech-stack-logo" />
+              <span class="tooltip">GITHUB</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/jslogo.png" alt="js skill" class="tech-stack-logo" />
-              <span class="tooltip">JS</span>
-            </li>
-
-            <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/bootstraplogo.png" alt="bootstrap skill" class="tech-stack-logo" />
-              <span class="tooltip">BOOTSTRAP</span>
+              <img src="./src/png/framer.png" alt="bootstrap skill" class="tech-stack-logo" />
+              <span class="tooltip">FRAMER</span>
             </li>
 
             
