--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ A visionary UI/UX designer skilled in user research, wireframing, and prototypin
             </p>
             <br />
             <p tabindex="0">
-              Instead of just focusing on the visual, I found a passion for the entire user experience process. Crafting custom designs taught me a lot about human-centered design & creative problem-solving!
+              Along with visuals, I found a passion for entire user experience process. Crafting custom designs taught me a lot about human-centered design & creative problem-solving!
             </p>
             <br />
             <p tabindex="0">
