short text changes

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           </div>
         </article>
         <p id="info-para" data-aos="fade-up" data-aos-delay="600">
-A visionary UI/UX designer skilled in user research, wireframing, and prototyping, crafting seamless digital experiences with Figma, Adobe XD, and Sketch.<br />
+Visionary UI/UX designer focused on user research, wireframing, and prototyping for seamless digital experiences.<br />
           <br />
           With a passion for intuitive design and user-centered solutions, they transform ideas into captivating, functional interfaces, consistently pushing boundaries and embracing innovation in the ever-evolving design landscape.
         </p>
