Projects and Prototypes Added

--- a/index.html
+++ b/index.html
@@ -394,8 +394,12 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                 </p>
                 <div class="project-buttons">
                   <a href="https://play.google.com/store/apps/details?id=com.headway.mybzb" target="_blank" class="github-redirect"
-                    aria-label="Visit My BzB on Play Store">
+                    aria-label="Visit My BzB on Playstore">
                     <img src="src/svg/playstore.svg" alt="github redirect button" />
+                  </a>
+                  <a href="https://www.figma.com/proto/morGUvrXL2kybuBifj19bQ/MyBzB---Website?node-id=3413-60275&node-type=frame&t=J6vkvAh013lZqx4S-1&scaling=scale-down-width&content-scaling=fixed&page-id=17%3A7" target="_blank" class="github-redirect"
+                    aria-label="Visit My BzB on Figma Prototype">
+                    <img src="src/svg/figmalogo.svg" alt="github redirect button" />
                   </a>
                   <a href="http://mybzb.com/#/" target="_blank" class="cta"
                     aria-label="View My BzB">
@@ -427,7 +431,11 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                     aria-label="Visit Suvarna Saubhagya Utsav on Play Store">
                     <img src="src/svg/playstore.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://www.headway.guru/" target="_blank" class="cta"
+                  <a href="https://play.google.com/store/apps/details?id=com.headway.ssu" target="_blank" class="github-redirect"
+                    aria-label="Visit Suvarna Saubhagya Utsav on Figma Prototype">
+                    <img src="src/svg/figmalogo.svg" alt="github redirect button" />
+                  </a>
+                  <a href="https://www.figma.com/proto/r9dMIYSqeKSagbheYFbWTc/SSU---Seller-%26-Customer-App?node-id=4196-702&node-type=frame&t=qnh5bBaTo7rb64wN-1&scaling=scale-down&content-scaling=fixed&page-id=17%3A10&starting-point-node-id=4196%3A1646&show-proto-sidebar=1" target="_blank" class="cta"
                     aria-label="View Suvarna Saubhagya Utsav">
                     <span>Website Visit</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
@@ -449,20 +457,18 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
               <div class="info-div">
                 <img src="src/webp/beautyhubb_logo.webp" alt="Beautyhubb Pro website favicon"
                   class="faviconforProjectAquaregia" />
-                <article class="ProjectHeading">Beautyhubb Pro</article>
+                <article class="ProjectHeading">Headway Business Solutions LLP</article>
                 <p class="ProjectDescription">
-                  Especially tailored for mobile or home-based beauty professionals, the beautyhubb pro app 
-				  is quick and efficient way to manage your business. Join Beautyhubb, the online one stop 
-				  shop for beauty bookings.
+                  Headway helps jewelers improve their business strategies, grow their brand, and boost profits through expert advice and tailored sessions..
                 </p>
                 <div class="project-buttons">
-                  <a href="https://apkpure.net/beautyhubb-pro/com.trs.stylish" target="_blank" class="github-redirect"
-                    aria-label="Visit Beautyhubb Pro on Apkpure">
-                    <img src="src/svg/playstore.svg" alt="github redirect button" />
+                  <a href="https://www.figma.com/proto/j3zmPKCOIAg10HDo0d9X4l/Headway-Business-Solution-LLP?node-id=1890-380&node-type=frame&t=ASDHmn0VcV8jGcra-1&scaling=scale-down-width&content-scaling=fixed&page-id=1%3A4" target="_blank" class="github-redirect"
+                    aria-label="Visit My BzB Figma Prototype">
+                    <img src="src/svg/figmalogo.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://apkpure.net/beautyhubb-pro/com.trs.stylish" target="_blank" class="cta"
-                    aria-label="Visit Beautyhubb Pro Live">
-                    <span>View App</span>
+                  <a href="http://mybzb.com/#/" target="_blank" class="cta"
+                    aria-label="View My BzB">
+                    <span>Website Visit</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
                       <path d="M1,5 L11,5"></path>
                       <polyline points="8 1 12 5 8 9"></polyline>
