--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                   </a>
                   <a href="http://mybzb.com/#/" target="_blank" class="cta"
                     aria-label="View My BzB">
-                    <span>Website Visit</span>
+                    <span>Web Visit</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
                       <path d="M1,5 L11,5"></path>
                       <polyline points="8 1 12 5 8 9"></polyline>
@@ -437,7 +437,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                   </a>
                   <a href="https://www.figma.com/proto/r9dMIYSqeKSagbheYFbWTc/SSU---Seller-%26-Customer-App?node-id=4196-702&node-type=frame&t=qnh5bBaTo7rb64wN-1&scaling=scale-down&content-scaling=fixed&page-id=17%3A10&starting-point-node-id=4196%3A1646&show-proto-sidebar=1" target="_blank" class="cta"
                     aria-label="View Suvarna Saubhagya Utsav">
-                    <span>Website Visit</span>
+                    <span>Web Visit</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
                       <path d="M1,5 L11,5"></path>
                       <polyline points="8 1 12 5 8 9"></polyline>
@@ -468,7 +468,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                   </a>
                   <a href="http://mybzb.com/#/" target="_blank" class="cta"
                     aria-label="View My BzB">
-                    <span>Website Visit</span>
+                    <span>Web Visit</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
                       <path d="M1,5 L11,5"></path>
                       <polyline points="8 1 12 5 8 9"></polyline>
