headway website added

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                 </div>
               </div>
               <div class="image-div">
-                <img src="src/webp/beautyhubbpro.webp" alt="Beautyhubb Pro app preview image" />
+                <img src="src/webp/headwayhome.webp" alt="Beautyhubb Pro app preview image" />
               </div>
             </div>
           </div>
