headway logo and website ss

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box2" id="project-box2">
               <div class="info-div">
-                <img src="src/webp/beautyhubb_logo.webp" alt="Beautyhubb Pro website favicon"
+                <img src="src/webp/headwaylogo.webp" alt="Beautyhubb Pro website favicon"
                   class="faviconforProjectAquaregia" />
                 <article class="ProjectHeading">Headway Business Solutions LLP</article>
                 <p class="ProjectDescription">
