--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                     aria-label="Visit My BzB Figma Prototype">
                     <img src="src/svg/figmalogo.svg" alt="github redirect button" />
                   </a>
-                  <a href="http://mybzb.com/#/" target="_blank" class="cta"
-                    aria-label="View My BzB">
+                  <a href="https://headway.org.in/#/" target="_blank" class="cta"
+                    aria-label="View Headway Business Solution LLP">
                     <span>Web Visit</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
                       <path d="M1,5 L11,5"></path>
