--- a/index.html
+++ b/index.html
@@ -431,11 +431,11 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                     aria-label="Visit Suvarna Saubhagya Utsav on Play Store">
                     <img src="src/svg/playstore.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://play.google.com/store/apps/details?id=com.headway.ssu" target="_blank" class="github-redirect"
+                  <a href="https://www.figma.com/proto/r9dMIYSqeKSagbheYFbWTc/SSU---Seller-%26-Customer-App?node-id=4196-702&node-type=frame&t=qnh5bBaTo7rb64wN-1&scaling=scale-down&content-scaling=fixed&page-id=17%3A10&starting-point-node-id=4196%3A1646&show-proto-sidebar=1" target="_blank" class="github-redirect"
                     aria-label="Visit Suvarna Saubhagya Utsav on Figma Prototype">
                     <img src="src/svg/figmalogo.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://www.figma.com/proto/r9dMIYSqeKSagbheYFbWTc/SSU---Seller-%26-Customer-App?node-id=4196-702&node-type=frame&t=qnh5bBaTo7rb64wN-1&scaling=scale-down&content-scaling=fixed&page-id=17%3A10&starting-point-node-id=4196%3A1646&show-proto-sidebar=1" target="_blank" class="cta"
+                  <a href="https://www.headway.guru" target="_blank" class="cta"
                     aria-label="View Suvarna Saubhagya Utsav">
                     <span>Web Visit</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
