--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="keywords"
     content="Hardik Chudasama,Hardik Chudasama portfolio,Hardik Chudasama Portfolio,hardikchudasama,Hardik Chudasama site,Hardik Chudasama Site,Hardik Chudasama me,Hardik Chudasama web,Hardik Chudasama github,hardikchudasama site,hardikchudasama uiverse,uiverse,Hardik Chudasama uiverse,Hardik Chudasama web designer,web designer,Hardik Chudasama haryana,hardik designer" />
   <meta name="author" content="Hardik Chudasama" />
-  <meta property="og:image" content="https://hardikprafulbhaichudasama.github.io/src/png/Preview-card-min.png" />
+  <meta property="og:image" content="https://chudasamahardik.github.io/src/png/Preview-card-min.png" />
   <meta property="og:title" content="Hardik Chudasama | Portfolio" />
   <meta property="og:description"
     content="Hi! My name is Hardik. I'm a UI/UX designer and digital visual artist. Explore my projects and designs to see how I craft intuitive interfaces, clean user flows, and thoughtful experiences. I value simplicity, clarity, and seamless interactions that elevate user engagement." />
