Headway on first place

--- a/index.html
+++ b/index.html
@@ -383,6 +383,38 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           <p class="sectionHeadingP"></p>
         </div>
         <div class="project-boxes-div">
+          <!-- ---------------------- -->
+          <!-- ----------Headway------------ -->
+          <div class="project-box-wrapper" data-aos="fade-up">
+            <div class="project-box project-box1" id="project-box1">
+              <div class="info-div">
+                <img src="src/webp/headwaylogo.webp" alt="Beautyhubb Pro website favicon"
+                  class="faviconforProjectAquaregia" />
+                <article class="ProjectHeading">Headway Business Solutions LLP</article>
+                <p class="ProjectDescription">
+                  Headway helps jewelers improve their business strategies, grow their brand, and boost profits through expert advice and tailored sessions..
+                </p>
+                <div class="project-buttons">
+                  <a href="https://www.figma.com/proto/j3zmPKCOIAg10HDo0d9X4l/Headway-Business-Solution-LLP?node-id=1890-380&node-type=frame&t=ASDHmn0VcV8jGcra-1&scaling=scale-down-width&content-scaling=fixed&page-id=1%3A4" target="_blank" class="github-redirect"
+                    aria-label="Visit My BzB Figma Prototype">
+                    <img src="src/svg/figmalogo.svg" alt="github redirect button" />
+                  </a>
+                  <a href="https://headway.org.in/#/" target="_blank" class="cta"
+                    aria-label="View Headway Business Solution LLP">
+                    <span>Web Visit</span>
+                    <svg viewBox="0 0 13 10" height="10px" width="15px">
+                      <path d="M1,5 L11,5"></path>
+                      <polyline points="8 1 12 5 8 9"></polyline>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/webp/headwayhome.webp" alt="Beautyhubb Pro app preview image" />
+              </div>
+            </div>
+          </div>
+          <!-- --------MyBzB-------------- -->
           <div data-aos="fade-up" class="project-box-wrapper">
             <div class="project-box project-box2" id="project-box2">
               <div class="info-div">
@@ -416,9 +448,9 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
               </div>
             </div>
           </div>
-
+          <!-- --------SSU-------------- -->
           <div data-aos="fade-up" class="project-box-wrapper">
-            <div class="project-box project-box2" id="project-box2">
+            <div class="project-box project-box3" id="project-box3">
               <div class="info-div">
                 <img src="src/png/ssu_logo.png" alt="ssu website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Suvarna Saubhagya Utsav</article>
@@ -447,37 +479,6 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
               </div>
               <div class="image-div">
                 <img src="src/webp/ssu.webp" alt="Pexelicon play store preview image" />
-              </div>
-            </div>
-          </div>
-
-          <!-- ---------------------- -->
-          <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box2" id="project-box2">
-              <div class="info-div">
-                <img src="src/webp/headwaylogo.webp" alt="Beautyhubb Pro website favicon"
-                  class="faviconforProjectAquaregia" />
-                <article class="ProjectHeading">Headway Business Solutions LLP</article>
-                <p class="ProjectDescription">
-                  Headway helps jewelers improve their business strategies, grow their brand, and boost profits through expert advice and tailored sessions..
-                </p>
-                <div class="project-buttons">
-                  <a href="https://www.figma.com/proto/j3zmPKCOIAg10HDo0d9X4l/Headway-Business-Solution-LLP?node-id=1890-380&node-type=frame&t=ASDHmn0VcV8jGcra-1&scaling=scale-down-width&content-scaling=fixed&page-id=1%3A4" target="_blank" class="github-redirect"
-                    aria-label="Visit My BzB Figma Prototype">
-                    <img src="src/svg/figmalogo.svg" alt="github redirect button" />
-                  </a>
-                  <a href="https://headway.org.in/#/" target="_blank" class="cta"
-                    aria-label="View Headway Business Solution LLP">
-                    <span>Web Visit</span>
-                    <svg viewBox="0 0 13 10" height="10px" width="15px">
-                      <path d="M1,5 L11,5"></path>
-                      <polyline points="8 1 12 5 8 9"></polyline>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-              <div class="image-div">
-                <img src="src/webp/headwayhome.webp" alt="Beautyhubb Pro app preview image" />
               </div>
             </div>
           </div>
