Project - Cyborg AI

--- a/index.html
+++ b/index.html
@@ -383,10 +383,31 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           <p class="sectionHeadingP"></p>
         </div>
         <div class="project-boxes-div">
-          <!-- ---------------------- -->
-          <!-- ----------Headway------------ -->
+          <!-- ----------Cyborg AI------------ -->
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box1" id="project-box1">
+              <div class="info-div">
+                <img src="src/webp/cyborgiacybepunkwebsite.webp" alt="cyborgiacybepunk website favicon"
+                  class="faviconforProjectCyberg" />
+                <article class="ProjectHeading">🎨 Cyberpunk Landing Page UI – A Glimpse into the Future! 🚀</article>
+                <p class="ProjectDescription">
+                  Designed a high-tech, immersive cyberpunk landing page with 3D elements, neon aesthetics, and a bold futuristic vibe...
+                </p>
+                <div class="project-buttons">
+                  <a href="https://www.figma.com/proto/8VQPyRXs9loJ1CdaE7iv35/Cyber.AI---Cyber-Punk-Website?page-id=0%3A1&node-id=3-88&viewport=140%2C330%2C0.07&t=MPPpb3ZOP7H9AVbh-1&scaling=contain&content-scaling=fixed" target="_blank" class="github-redirect"
+                    aria-label="Visit Cyberpunk Landing Page Prototype">
+                    <img src="src/svg/figmalogo.svg" alt="github redirect button" />
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/webp/cyborgiacybepunkwebsite.webp" alt="Beautyhubb Pro app preview image" />
+              </div>
+            </div>
+          </div>
+          <!-- ----------Headway------------ -->
+          <div class="project-box-wrapper" data-aos="fade-up">
+            <div class="project-box project-box2" id="project-box2">
               <div class="info-div">
                 <img src="src/webp/headwaylogo.webp" alt="Beautyhubb Pro website favicon"
                   class="faviconforProjectAquaregia" />
@@ -416,7 +437,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- --------MyBzB-------------- -->
           <div data-aos="fade-up" class="project-box-wrapper">
-            <div class="project-box project-box2" id="project-box2">
+            <div class="project-box project-box3" id="project-box3">
               <div class="info-div">
                 <img src="src/png/mybzb.png" alt="ssu website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">My BzB</article>
@@ -450,7 +471,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- --------SSU-------------- -->
           <div data-aos="fade-up" class="project-box-wrapper">
-            <div class="project-box project-box3" id="project-box3">
+            <div class="project-box project-box4" id="project-box4">
               <div class="info-div">
                 <img src="src/png/ssu_logo.png" alt="ssu website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Suvarna Saubhagya Utsav</article>
@@ -482,9 +503,9 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
               </div>
             </div>
           </div>
-          <!-- ---------------------- -->
+          <!-- -----------Gamexso----------- -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box4" id="project-box4">
+            <div class="project-box project-box5" id="project-box5">
               <div class="info-div">
                 <img src="src/webp/gamexso_logo.webp" alt="Gamexso website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Gamexso</article>
@@ -513,9 +534,9 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
             </div>
           </div>
 
-          <!-- ---------------------- -->
+          <!-- ------------Quantic POS---------- -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box3" id="project-box3">
+            <div class="project-box project-box6" id="project-box6">
               <div class="info-div">
                 <img src="src/png/quantic_pos.png" alt="netflix website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Quantic POS</article>
@@ -545,10 +566,10 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
             </div>
           </div>
 
-          <!-- ---------------------- -->
+          <!-- ---------Quantic Lite------------- -->
 		  
 		  <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box3" id="project-box3">
+            <div class="project-box project-box7" id="project-box7">
               <div class="info-div">
                 <img src="src/png/quantic_lite.png" alt="netflix website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Quantic Lite</article>
