Reduce the size of Preview Landing Page on Thumbnails

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
                 </div>
               </div>
               <div class="image-div">
-                <img src="src/webp/cyborgiacybepunkwebsite.webp" alt="Beautyhubb Pro app preview image" />
+                <img src="src/webp/cyborgiacybepunkwsite.webp" alt="Cyberg landing page preview image" />
               </div>
             </div>
           </div>
