Reduced Title Character of Cyber Project

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
               <div class="info-div">
                 <img src="src/webp/cyborgiacybepunkwebsite.webp" alt="cyborgiacybepunk website favicon"
                   class="faviconforProjectCyberg" />
-                <article class="ProjectHeading">🎨 Cyberpunk Landing Page UI – A Glimpse into the Future! 🚀</article>
+                <article class="ProjectHeading">Cyberpunk Landing Page UI</article>
                 <p class="ProjectDescription">
                   Designed a high-tech, immersive cyberpunk landing page with 3D elements, neon aesthetics, and a bold futuristic vibe...
                 </p>
