Cyber logo reduced

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box1" id="project-box1">
               <div class="info-div">
-                <img src="src/webp/cyborgiacybepunkwebsite.webp" alt="cyborgiacybepunk website favicon"
+                <img src="src/png/cyborgailogo.png" alt="cyborgiacybepunk website favicon"
                   class="faviconforProjectCyberg" />
                 <article class="ProjectHeading">Cyberpunk Landing Page UI</article>
                 <p class="ProjectDescription">
